--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- https://codepen.io/AgnesKr/pen/qLQNKM -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -164,7 +165,7 @@
             onchange="changeTime()"
           />
         </div>
-      <span id="speaker" onclick="fullScreenHandler()">⛶</span>
+      <span id="fullScreen onclick="fullScreenHandler()">⛶</span>
         
         <div class="soundContainer">
           <input
